- Improve window title background when not all buttons are visible
- Menus can no longer be minimized (that had no sense)
- Process switcher: unminimize windows when selecting them and they were minimized

Improved ZX Desktop:
- Allow to set parameters when redefining upper buttons, for some actions like openwindow or set machine
- Allow to reconfigure upper buttons by right clicking over them

* Fixes:

Fixed ZX Vision:
- Fixed bug when printing on footer and column was out of bounds (exactly at column 32)
- Fixed splash texts when row > 23
- Fixed pressing keys '.' and ',' on menu when machine is ZX80 or ZX81
- Fixed glitch on ZX Vision BeOS style, when pressing F5, window buttons didn't disappear or reappear
- Fixed refresh windows after pressing F8 On Screen Keyboard
- Fixed splash messages when background windows are enabled

Fixed blockage when drawing Text Adventure Map and corrupted GAC adventure
Fixed timings of opcodes CP (HL), CP (IX+d), CP (IY+d)
Fixed bug on ZRCP when handling simultaneous connections

----------------------------------------


Version X - 10th Anniversary edition. 24 September 2023

This is a special edition to celebrate the 10 years old of ZEsarUX. Version is called "X" (actually is version 10.10)

* New things added:

Added new compiled versions: Ubuntu and Fedora
Added PCW colour modes
Added PCW Joysticks support: Kempston, Cascade, DKTronics, OPQASpace
Added screen previews of directories and compressed files on File Selector
Added flash support on screen previews on File Selector
Added rom file selection for any machine you select, rom file name is saved on configuration
Added another toy "ZXLife" to a new menu Procrastinate
Added Ascii Table window
Added Creator Info to ZSF snapshots
Added compilation system release to Compile info window
Added Docker support
Added another easter egg ;)

* Improvements:

Improved ZENG:
- Allow to connect more than two hosts (up to 16)
- Hostnames/IPs accept changing port using ":port"